--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -124,6 +124,7 @@ table tr.alt { background-color: #EEE; }
 table tr.new { background-color: #f6f8ff; }
 table.data em {font-weight:bolder; color:red;}
 table td.item { padding:5px 5px 2px 5px; }
+table td.static { background-color: #FFF; }
 div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
 div.hint { margin-bottom:10px;}
 input.long {width:400px; }
@@ -205,7 +206,7 @@ div.nosearchresults ul { line-height: 150%;}
 .rndbtn { padding-left:4px; padding-right:4px; margin-right:1px; border:1px #CCC solid; background-color:#EEE; -moz-border-radius: 4px;  -webkit-border-radius: 4px;}
 table.highlight tr:hover .rndbtn, table tr.alt .rndbtn { background-color: #fff; }
 table.highlight tr:hover .rndbtn:hover { background-color: #DDD; }
-
+table.highlight tr:hover td.static { background-color: #FFF; }
 
 
 
