--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -155,8 +155,7 @@ pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 
 #musicinfo h1 { font-size: 32px; padding: 10px 10px 0px 20px; color: #fff; }
 #musicinfo h2, #musicinfo h3, #musicinfo p { padding: 10px 20px 0px 20px; color: #fff;}
 #musicinfo a { color: #fff; }
-#musicinfo img.cover 
-{ float:right;  margin-top: 20px; margin-left: 20px; margin-right:20px;  padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #333; -webkit-box-shadow: 3px 6px 8px -4px #333; box-shadow: 3px 6px 8px -4px #333; }
+#musicinfo img.cover { float:right;  margin-top: 20px; margin-left: 20px; margin-right:20px;  padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #333; -webkit-box-shadow: 3px 6px 8px -4px #333; box-shadow: 3px 6px 8px -4px #333; }
 #musicinfo p {text-align: left; line-height: 180%;}
 
 div.resextra { padding-top:7px; color: #555; font-size: 0.9em; height:16px; }
@@ -169,6 +168,9 @@ div.resextra div.admin { float:right; }
 div.resextra div.btns {float:left; }
 
 ol.tracklist li { line-height: 140%; }
+
+div.tvseriesheading img {float:right; margin-top:10px; padding: 5px 5px 5px 5px; background: #FFF; border:1px solid #EEE; -moz-box-shadow: 3px 6px 8px -4px #777; -webkit-box-shadow: 3px 6px 8px -4px #777; box-shadow: 3px 6px 8px -4px #777; }
+div.tvseriesheading p {text-align:left;}
 
 div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(../images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 div.comments { padding-top:20px; }
