Normalize all metadata on details page to give it a standard look across sections. Part of issue 244.
git-svn-id: svn://svn.newznab.com/nn/trunk@1296 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -132,8 +132,8 @@ table td.static { background-color: #FFF; }
 .left { text-align:left !important;}
 .right { text-align:right !important;}
 .mid { text-align:center !important;}
-
-
+#detailstable { width: 70%; }
+#detailstable th { width: 100px; }
 
 
 
@@ -214,8 +214,11 @@ ol.tracklist li { line-height: 140%; }
 
 div.tvseriesheading img {float:right; margin:10px 0 10px 10px; }
 div.tvseriesheading p {text-align:left;}
-div.tvseriesheading a.tvmore {display:block; margin-top:10px;}
-div.tvseriesheading span.tvdescfull {display:none;}
+
+a.descmore {display:block; margin-top:10px;}
+span.descfull {display:none;}
+#detailstable a.descmore { display: inline; margin: 0px; }
+
 
 div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(../images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 div.comments { padding-top:20px; }
