--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -229,7 +229,7 @@ div.comments { padding-top:20px; }
 div.nosearchresults {margin-left:25px; padding-top:50px;}
 div.nosearchresults ul { line-height: 150%;}
 
-
+span.warning { color: red; }
 
 
 
