add top links to seriesview, remove double require
git-svn-id: svn://svn.newznab.com/nn/trunk@1424 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/views/styles/style.css
+++ b/www/views/styles/style.css
@@ -222,6 +222,7 @@ a.descmore {display:block; margin-top:10px;}
 span.descfull {display:none;}
 #detailstable a.descmore { display: inline; margin: 0px; }
 
+a.top_link { float: right; font-size: 9px; vertical-align: super; }
 
 div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(../images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 div.comments { padding-top:20px; }
